@@ -96,6 +96,7 @@ Engine extensions:
   - May be performed by air units
   - Invisible, undetected units may be made immune
   - May be performed multiple times per turn with blitz
+  - ** May be performed by docked naval units vs land attackers
  - Zone of control overhaul
   - Allow land-to-sea and sea-to-land attacks, only using bombard stat
   - May be lethal
