@@ -297,8 +297,9 @@ enable_city_capture_by_barbarians = false
 ;   aerial: Air units may perform defensive bombard if they can perform bombing missions.
 ;   not-invisible: Attacking units are immune to defensive bombard if they are invisible and not detected.
 ;   blitz: Units with blitz may perform defensive bombard multiple times per turn, once for each move they have.
-; For example, to activate all options, set to [lethal aerial not-invisible blitz]. The order of items in the list does not matter. You can also
-; activate all options by setting to [all] (with or without the brackets).
+;   docked-vs-land: Docked ships (i.e. in a city) can perform defensive bombard against land units attacking their city.
+; For example, to activate all options, set to [lethal aerial not-invisible blitz docked-vs-land]. The order of items in the list does not matter. You
+; can also activate all options by setting to [all] (with or without the brackets).
 special_defensive_bombard_rules = []
 
 ; A list of modifications to the rules for zone of control, like above for defensive bombard. The possibilities are:
